# gpu_selection

./: CMakeLists.txt
include/: cuda_definitions.cuh
lib/: verification.cpp
